samples/_failures_safe/1761170838_31bf95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_831c8717.c: In function ‘main’:
./samples/SAFE/__tmp_831c8717.c:130:5: error: expected expression at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols))
      |     ^~
./samples/SAFE/__tmp_831c8717.c:130:5: error: expected declaration or statement at end of input
